# thresh-sig-js

./: .npmignore  .snyk  .travis.yml  README.md  package-lock.json  package.json  tsconfig.json
demo/: ecdsa-party2.js  eddsa-party2.js  party1-api.js  party1.js  party2-sign.js  party2.js  schnorr-party2.js
native/: Cargo.toml
native/src/: lib.rs  party1.rs  server.rs
native/src/party1/: ecdsa.rs  mod.rs
native/src/party2/: ecdsa.rs  eddsa.rs  mod.rs
native/src/party2/ecdsa/: mod.rs
native/src/party2/eddsa/: mod.rs
native/src/party2/schnorr/: mod.rs
native/src/protocols/: mod.rs
native/src/protocols/two_party_ecdsa/: mod.rs  party1.rs  party2.rs
src/: bindings.ts  common.ts  index.ts  party1-server.ts  party1.ts  party2.ts
src/party1/: base.ts  ecdsa.ts  index.ts
src/party2/: ecdsa.ts  eddsa.ts  index.ts  schnorr.ts
test/: ecdsa-sig-tests.js  eddsa-sig-tests.js  schnorr-sig-tests.js  thresh-sig-tests.js
