[package]
name = "mpc-bindings"
version = "0.1.0"
authors = ["oded@kzencorp.com <oded@kzencorp.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "mpc_bindings"
crate-type = ["staticlib", "dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
serde = "1.0.75"
serde_json = "1.0.26"
serde_derive = "1.0.75"
gotham-client = { path = "../../gotham-city/gotham-client" }
gotham-server = { path = "../../gotham-city/gotham-server" }